# Aegis-Flow

./: .gitignore  AUDIT_CONTEXT.md  Aegis-Flow.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SBOM.json  SECURITY.md  build_rs_cov.profraw  check_versions.py  clippy.toml  coverage_output.txt  deny.toml  docker-compose.yml  prometheus.yml  prometheus_rules.yml  rustfmt.toml  tarpaulin.toml  test.html  test.md  test.txt
.cargo/: audit.toml
.config/: nextest.toml
.github/workflows/: bench.yml  ci.yml  release.yml
certs/: ca.crt  ca.key  ca.srl  server.crt  server.csr  server.ext  server.key
conductor/: product-guidelines.md  product.md  source_code_analysis_plan.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/observability_dashboards_20251228/: metadata.json  plan.md  spec.md
conductor/code_styleguides/: rust.md
conductor/tracks/advanced_request_processing_20260302/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/advanced_request_processing_hardening_20260304/: plan.md  spec.md
conductor/tracks/aegisfile_config_20260302/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/aegisfile_config_hardening_20260304/: plan.md  spec.md
conductor/tracks/auto_https_20260302/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/auto_https_hardening_20260304/: plan.md  spec.md
conductor/tracks/benchmark_hardening_20260304/: metadata.json  plan.md  spec.md
conductor/tracks/benchmarks_20251226/: metadata.json  plan.md  spec.md
conductor/tracks/caching_20260302/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/caching_hardening_20260304/: plan.md  spec.md
conductor/tracks/carbon_aware_20251225/: metadata.json  plan.md  spec.md
conductor/tracks/carbon_aware_hardening_20260304/: metadata.json  plan.md  spec.md
conductor/tracks/cloud_native_20251225/: plan.md  spec.md
conductor/tracks/cloud_native_hardening_20260304/: metadata.json  plan.md  spec.md
conductor/tracks/core_tee_pqc_20251224/: metadata.json  plan.md  spec.md
conductor/tracks/dynamic_config_api_20260302/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/dynamic_config_api_hardening_20260304/: plan.md  spec.md
conductor/tracks/ebpf_telemetry_20251226/: metadata.json  plan.md  spec.md
conductor/tracks/ebpf_telemetry_hardening_20260304/: metadata.json  plan.md  spec.md
conductor/tracks/genomics_20251226/: metadata.json  plan.md  spec.md
conductor/tracks/genomics_hardening_20260304/: metadata.json  plan.md  spec.md
conductor/tracks/geoip_mail_20260302/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/geoip_mail_hardening_20260304/: plan.md  spec.md
conductor/tracks/http3_quic_20251226/: metadata.json  plan.md  spec.md
conductor/tracks/http3_quic_hardening_20260304/: metadata.json  plan.md  spec.md
conductor/tracks/logging_cli_20260302/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/logging_cli_hardening_20260304/: plan.md  spec.md
conductor/tracks/mldsa_signing_20251228/: metadata.json  plan.md  spec.md
conductor/tracks/multi_worker_20260302/: index.md  metadata.json  plan.md  spec.md
config/: default.toml  local.toml
coverage/: tarpaulin-report.html
coverage_report/: tarpaulin-report.html
coverage_reports/: tarpaulin-report.html
crates/aegisfile/: Cargo.toml
crates/aegisfile/src/: ast.rs  (+1 more)
crates/certman/: Cargo.toml
crates/certman/src/: acme.rs  challenge.rs  lib.rs  ocsp.rs  storage.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  phase22_tests.rs  types.rs
crates/crypto/: Cargo.toml
crates/crypto/benches/: mldsa_signing.rs  pqc_handshake.rs
crates/crypto/fuzz/: Cargo.toml
crates/crypto/fuzz/fuzz_targets/: fuzz_attestation.rs  fuzz_hybrid_kex.rs
crates/crypto/src/: attestation.rs  certmanager.rs  cipher.rs  hybrid_kex.rs  lib.rs  mtls.rs  signing.rs  stream.rs  stream_tests.rs  tls.rs  traits.rs
crates/energy/: Cargo.toml
crates/energy/src/: cache.rs  client.rs  lib.rs  types.rs
crates/genomics/: Cargo.toml
crates/genomics/src/: alignment.rs  analytics.rs  bam_parser.rs  lib.rs  schema.rs  variant.rs  vcf_parser.rs
crates/mail/: Cargo.toml
crates/mail/src/: imap.rs  lib.rs  mail_auth.rs  pop3.rs  smtp.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: engine.rs  interface.rs  lib.rs  registry.rs
crates/procman/: Cargo.toml
crates/procman/src/: cluster.rs  config.rs  daemon.rs  ipc.rs  lib.rs  metrics.rs  process.rs  table.rs
crates/proxy/: Cargo.toml  build.rs
crates/proxy/benches/: carbon_router.rs  green_wait.rs  http3_throughput.rs  load_test.rs  pqc_handshake.rs
crates/proxy/proto/envoy/api/v3/: cds.proto  discovery.proto  lds.proto  rds.proto
crates/proxy/src/: access_log.rs  acl.rs  acme.rs  admin_api.rs  auth.rs  auth_request.rs  autoindex.rs  bootstrap.rs  caching.rs  carbon_router.rs  circuit_breaker.rs  compression.rs  config.rs  conn_limit.rs  discovery.rs  dns.rs  dual_stack_server.rs  fastcgi.rs  geoip.rs  green_wait.rs  h3_adapter.rs  headers.rs  health_check.rs  health_server.rs  http3_handler.rs  http_proxy.rs  image_filter.rs  jwt.rs  lb.rs  lib.rs  lifecycle.rs  limit_except.rs  limit_rate.rs  location.rs  main.rs  map_directive.rs  master.rs  metrics.rs  mime_types.rs  mirror.rs  (+36 more)
crates/proxy/src/xds/: ads.rs  cds.rs  lds.rs  mod.rs  rds.rs  server.rs  snapshot.rs
crates/proxy/tests/: carbon_green_integration.rs  config_integration.rs  health_server_integration.rs  pqc_server_integration.rs  proxy_flow.rs  quic_server_integration.rs  server_integration.rs  stream_integration.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: energy.rs  estimator.rs  lib.rs  prometheus.rs
crates/telemetry/src/ebpf/: loader.rs  metrics.rs  mod.rs
deploy/grafana/: dashboard.json
docs/benchmarks/: RESULTS.md
docs/rfcs/: RFC-001-hybrid-kex.md
examples/: Cargo.toml  carbon_routing.rs  config_demo.rs  pqc_handshake.rs
examples/src/: main.rs
grafana/: dashboard.json  datasources.yml
grafana/provisioning/: dashboards.yaml
gramine/: aegis-proxy.manifest.template  build.sh
(+95 files in other folders)
