[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/crypto",
    "crates/energy",
    "crates/genomics",
    "crates/plugins",
    "crates/proxy",
    "crates/telemetry",
]

[workspace.package]
version = "0.10.0"
edition = "2024"
authors = ["Aegis-Flow Contributors"]
license = "Apache-2.0"
repository = "https://github.com/aegis-flow/aegis-flow"
description = "Post-Quantum Cryptography enabled, Carbon-Aware Service Mesh Data Plane"
keywords = ["post-quantum", "cryptography", "service-mesh", "proxy", "rust"]
categories = ["cryptography", "network-programming", "asynchronous"]

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.48", features = ["full"] }

# Networking
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1" }
tower = { version = "0.5", features = ["full"] }
bytes = "1.11"

# HTTP/3 & QUIC
s2n-quic = "1.71"

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = "0.26"

# Post-Quantum Cryptography (NIST ML-KEM/ML-DSA standards)
pqcrypto-mlkem = "0.1"
pqcrypto-mldsa = "0.1"  # NIST ML-DSA (FIPS 204)
pqcrypto-traits = "0.3"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Testing & Benchmarking
criterion = { version = "0.8", features = ["html_reports"] }

# Development
rand = "0.8"

# Encryption
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"

# Configuration
serde_yml = "0.0"
toml = "0.8"

# Certificate Management
x509-parser = "0.17"
rcgen = { version = "0.13", features = ["default"] }
ring = "0.17"
webpki-roots = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }

# Faster sync primitives
parking_lot = "0.12"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
lto = true

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
