[package]
name = "certman"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
base64 = "0.22.1"
pem = "3.0.6"
rcgen.workspace = true
reqwest = { version = "0.13.2", features = ["json"] }
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["full"] }
x509-parser.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.26.0"
