[package]
name = "aegis-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Common utilities and types for Aegis-Flow"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
bytes.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
