[package]
name = "aegis-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Post-Quantum Cryptography module for Aegis-Flow"

[features]
# Enable real TEE attestation backends (Intel DCAP, AMD SEV-SNP libraries).
# When inactive, platform verify functions return Err(NotImplemented).
tee-real = []

[dependencies]
aegis-common = { path = "../common" }

# Post-Quantum Cryptography (NIST ML-KEM standard)
pqcrypto-mlkem.workspace = true
pqcrypto-mldsa.workspace = true
pqcrypto-traits.workspace = true
x25519-dalek.workspace = true
ed25519-dalek.workspace = true

# Standard crypto
rand.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Observability
tracing.workspace = true

# Serialization
serde.workspace = true
bytes.workspace = true

# Async
tokio = { workspace = true, features = ["io-util", "rt"] }

# Encryption
aes-gcm.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true
zeroize.workspace = true
raw-cpuid.workspace = true

# Certificate Management
x509-parser.workspace = true
parking_lot.workspace = true
rcgen.workspace = true
time.workspace = true
hex = "0.4"
pem = "3.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
criterion.workspace = true
tracing-subscriber.workspace = true
proptest = "1.10.0"

[[bench]]
name = "pqc_handshake"
harness = false

[[bench]]
name = "mldsa_signing"
harness = false
