[package]
name = "aegis-genomics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance genomic data processing with Apache Arrow and Polars"

[dependencies]
aegis-common = { path = "../common" }

# Apache Arrow
arrow = { version = "53", features = ["prettyprint"] }
arrow-schema = "53"
arrow-array = "53"
arrow-buffer = "53"

# Polars DataFrame
polars = { version = "0.46", features = ["lazy", "dtype-struct", "strings"] }

# Genomic formats (BAM/VCF)
noodles = { version = "0.89", features = ["bam", "vcf", "fasta"] }

# Async Runtime
tokio = { workspace = true, features = ["sync"] }

# Observability
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
