[package]
name = "aegis-genomics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance genomic data processing with Apache Arrow and Polars"

[dependencies]
aegis-common = { path = "../common" }

# Apache Arrow
arrow = { version = "57", features = ["prettyprint"] }
arrow-schema = "57"
arrow-array = "57"
arrow-buffer = "57"

# Polars DataFrame
polars = { version = "0.51", features = ["lazy", "dtype-struct", "strings", "ipc"] }

# Genomic formats (BAM/VCF)
noodles = { version = "0.104", features = ["bam", "vcf", "fasta"] }

# Async Runtime
tokio = { workspace = true, features = ["sync"] }

# Observability
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
