[package]
name = "aegis-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance PQC-enabled proxy server for Aegis-Flow"

[dependencies]
aegis-common = { path = "../common" }
aegis-crypto = { path = "../crypto" }
aegis-energy = { path = "../energy" }
aegis-telemetry = { path = "../telemetry" }

# Async Runtime
tokio.workspace = true

# Networking
hyper.workspace = true
hyper-util.workspace = true
tower.workspace = true
bytes.workspace = true
http-body-util = "0.1"

# TLS
rustls.workspace = true
tokio-rustls.workspace = true

# QUIC
s2n-quic.workspace = true

# HTTP/3
h3 = "0.0.7"

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Config & Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
hex = "0.4"
rand.workspace = true

[dev-dependencies]
criterion.workspace = true
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
tempfile = "3.15"

[[bin]]
name = "aegis-proxy"
path = "src/main.rs"

[lib]
name = "aegis_proxy"
path = "src/lib.rs"

[[bench]]
name = "pqc_handshake"
harness = false

[[bench]]
name = "http3_throughput"
harness = false

[[bench]]
name = "carbon_router"
harness = false

[[bench]]
name = "load_test"
harness = false
