[package]
name = "aegis-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance PQC-enabled proxy server for Aegis-Flow"

[dependencies]
aegis-common = { path = "../common" }
aegis-crypto = { path = "../crypto" }
aegis-energy = { path = "../energy" }
aegis-telemetry = { path = "../telemetry" }

# Async Runtime
tokio.workspace = true

# Networking
hyper.workspace = true
hyper-util.workspace = true
tower.workspace = true
bytes.workspace = true
http-body-util = "0.1"

# TLS
rustls.workspace = true
tokio-rustls.workspace = true

# QUIC
s2n-quic.workspace = true

# HTTP/3
h3 = "0.0.8"

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Config & Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
hex = "0.4"
rand.workspace = true
parking_lot.workspace = true
phf = { version = "0.11", features = ["macros"] }

# HTTP Client for forwarding
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "http2"] }
lru = "0.16.3"
moka = "0.12.14"
sha2.workspace = true
chrono = "0.4"
flate2 = "1.1.9"
brotli = "8.0.2"
once_cell = "1.21.3"
tokio-util = { version = "0.7.18", features = ["io"] }
percent-encoding = "2.3.2"
html-escape = "0.2.13"
http-body = "1.0.1"
futures-util = "0.3.32"
libc = "0.2.182"
regex = "1.12.3"
ipnetwork = "0.21.1"
bcrypt = "0.18.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
base64 = "0.22.1"
axum = "0.8.8"
sha1 = { version = "0.10.6", features = ["oid"] }
instant-acme = "0.8.5"
rcgen.workspace = true
rustls-pemfile = "2.2.0"
x509-parser.workspace = true
aes-gcm.workspace = true
x509-ocsp = { version = "0.2.1", features = ["builder"] }
der = "0.8.0"
der-parser = "10.0.0"
spki = "0.7.3"
x509-cert = "0.2"
murmur3 = "0.5.2"
hostname = "0.4"

# gRPC & Protobuf
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio-stream.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
hickory-resolver.workspace = true

[features]
default = []
xds = []
otel = []

[dev-dependencies]
criterion.workspace = true
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
tempfile = "3.15"
rcgen.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio-test = "0.4"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "aegis-proxy"
path = "src/main.rs"

[lib]
name = "aegis_proxy"
path = "src/lib.rs"

[[bench]]
name = "pqc_handshake"
harness = false

[[bench]]
name = "http3_throughput"
harness = false

[[bench]]
name = "carbon_router"
harness = false

[[bench]]
name = "load_test"
harness = false
